HW5SERVER/tests/output/t9.out
lli: tmp.ll:32:15: error: '%1' defined with type 'i32' but expected 'i8'
%t0 = zext i8 %1 to i32
              ^
